--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "node-sass": "^4.12.0",
+    "react": "^16.8.0",
+    "react-dom": "^16.8.0",
+    "react-jss": "^8.6.1",
+    "react-scripts": "3.0.1",
+    "react-spring": "^8.0.27"
   },
   "scripts": {
     "start": "react-scripts start",
