--- a/src/projects.json
+++ b/src/projects.json
@@ -1,10 +1,18 @@
 [
+        {
+        "title": "Shiznic",
+        "summary": "My client needed a wordpress site for their CBD business, This was one of the first ecommerce sites I've set up" ,
+        "image": "/images/shiznic.PNG",
+        "link": "https://shiznic.com/",
+        "gradient": "#38ef7d, #11998e",
+        "tech": ["wordpress"]
+    },
     {
         "title": "Brown Sales INC",
         "summary": "WordPress was a requirement for this site, so I learned WordPress and made Brown Sales a site for their multi-family flooring business" ,
         "image": "/images/brownsalesaz.PNG",
         "link": "https://brownsalesaz.com/",
-        "gradient": "#A6FFCB, #1FA2FF",
+        "gradient": "#004e92, #000428",
         "tech": ["wordpress"]
     },
     {
@@ -23,7 +31,7 @@
         "image": "/images/brightstar-bucks.PNG",
         "link": "https://brightstarbucks.herokuapp.com/",
         "repo": "https://github.com/xeroneon/brightstar/",
-        "gradient": "#AA076B, #61045F",
+        "gradient": "#2C5364, #0F2027",
         "tech": ["mongo", "express", "react", "node"]
 
     },
@@ -33,7 +41,7 @@
         "image": "/images/hiker.PNG",
         "link": "https://hiker-az.herokuapp.com/",
         "repo": "https://github.com/xeroneon/Hiker/",
-        "gradient": "#B5AC49, #3CA55C",
+        "gradient": "#a2ab58, #636363",
         "tech": ["mongo", "express", "react", "node"]
         
 
@@ -64,7 +72,7 @@
         "image": "/images/map-up.PNG",
         "link": "https://xeroneon.github.io/Project-1/",
         "repo": "https://github.com/xeroneon/Project-1/",
-        "gradient": "#BE8BBD, #960398",
+        "gradient": "#8E2DE2, #4A00E0",
         "tech": ["html", "css", "js", "firebase"]
 
     },
@@ -84,7 +92,7 @@
         "image": "/images/project-2.PNG",
         "link": "https://safe-coast-77807.herokuapp.com/",
         "repo": "https://github.com/xeroneon/project-2/",
-        "gradient": "#EA384D, #D31027",
+        "gradient": "#c94b4b, #4b134f",
         "tech": ["mysql", "express", "handlebars", "node"]
 
     }
